# reading_room_v2

./: CMakeLists.txt  CONCEPT.txt  README.txt  person_v2.c  reading_room_v2.c  utils.h
utils/: definitions.h  message_queue.h  semaphore.h  shared_memory.h  titles.h
